# spotify-to-yt-sync

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  sync.py
web/: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/auth/credentials/: route.ts
web/src/app/api/auth/logout/: route.ts
web/src/app/api/auth/spotify/: route.ts
web/src/app/api/auth/spotify/callback/: route.ts
web/src/app/api/auth/status/: route.ts
web/src/app/api/auth/youtube/: route.ts
web/src/app/api/auth/youtube/callback/: route.ts
web/src/app/api/playlists/spotify/: route.ts
web/src/app/api/playlists/youtube/: route.ts
web/src/app/api/sync/: route.ts
web/src/app/api/sync/config/: route.ts
web/src/app/api/sync/status/: route.ts
web/src/app/dashboard/: page.tsx
web/src/app/setup/: page.tsx
web/src/lib/: credentials.ts  kv.ts  session.ts  spotify.ts  youtube.ts
web/src/types/: index.ts
